@@ -1,0 +1,2 @@
+for name in names:
+    name = name.lower()  # [redefined-loop-name]
