@@ -1,0 +1,2 @@
+for name in names:
+    lowercased_name = name.lower()
