@@ -1742,3 +1742,11 @@ def in_type_checking_block(node: nodes.NodeNG) -> bool:
         and ancestor.test.as_string() in TYPING_TYPE_CHECKS_GUARDS
         for ancestor in node.node_ancestors()
     )
+
+
+@lru_cache()
+def in_for_else_branch(parent: nodes.NodeNG, stmt: nodes.Statement) -> bool:
+    """Returns True if stmt is inside the else branch for a parent For stmt."""
+    return isinstance(parent, nodes.For) and any(
+        else_stmt.parent_of(stmt) or else_stmt == stmt for else_stmt in parent.orelse
+    )
