@@ -4,22 +4,22 @@ __revision__ = 0
 
 # Simple nested loop
 for i in range(10):
-    for i in range(10): #[redefined-outer-name]
+    for i in range(10): #[redefined-loop-name]
         print(i)
 
 # When outer loop unpacks a tuple
 for i, i_again in enumerate(range(10)):
-    for i in range(10): #[redefined-outer-name]
+    for i in range(10): #[redefined-loop-name]
         print(i, i_again)
 
 # When inner loop unpacks a tuple
 for i in range(10):
-    for i, i_again in range(10): #[redefined-outer-name]
+    for i, i_again in range(10): #[redefined-loop-name]
         print(i, i_again)
 
 # With nested tuple unpacks
 for (a, (b, c)) in [(1, (2, 3))]:
-    for i, a in range(10): #[redefined-outer-name]
+    for i, a in range(10): #[redefined-loop-name]
         print(i, a, b, c)
 
 # Ignores when in else
@@ -35,3 +35,8 @@ else:
 for _ in range(10):
     for _ in range(10):
         print("Hello")
+
+# Unpacking
+for i, *j in [(1, 2, 3, 4)]:
+    for j in range(i):  # [redefined-loop-name]
+        print(j)
