@@ -1,0 +1,5 @@
+redefined-loop-name:7:4:8:16::Redefining 'i' from loop (line 6):HIGH
+redefined-loop-name:12:4:13:25::Redefining 'i' from loop (line 11):HIGH
+redefined-loop-name:17:4:18:25::Redefining 'i' from loop (line 16):HIGH
+redefined-loop-name:22:4:23:25::Redefining 'a' from loop (line 21):HIGH
+redefined-loop-name:41:4:42:16::Redefining 'j' from loop (line 40):HIGH
