@@ -1,7 +1,8 @@
-"""Test case for variable redefined in inner loop."""
+"""No message is emitted for variables overwritten in inner loops by default.
+See redefined-loop-name optional checker."""
 for item in range(0, 5):
     print("hello")
-    for item in range(5, 10): #[redefined-outer-name]
+    for item in range(5, 10):
         print(item)
         print("yay")
     print(item)
